tests/negative/neg_pr113_incomplete_constraints.safe
package neg_PR113_Incomplete_Constraints
   type packet (Active : boolean = True, Kind : character = 'A', Count : integer = 0) is
      record
         value : integer;

   p : packet (True, 'A') = (value = 1);

